[gd_scene format=3 uid="uid://bux64un21k338"]

[ext_resource type="Script" uid="uid://752w6obyey2e" path="res://script/enemy.gd" id="1_o1l8c"]
[ext_resource type="Script" uid="uid://ca685uc113riu" path="res://addons/cognite/node/cognite_node.gd" id="2_y3xqi"]
[ext_resource type="Resource" uid="uid://b81wumclk0brh" path="res://assets/cognite/enemy.tres" id="3_a2mso"]

[sub_resource type="SphereMesh" id="SphereMesh_y3xqi"]

[sub_resource type="Gradient" id="Gradient_o1l8c"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.31363636, 0.9, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.7176471, 0.7176471, 0.7176471, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y3xqi"]
resource_local_to_scene = true
gradient = SubResource("Gradient_o1l8c")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a2mso"]
resource_local_to_scene = true
transparency = 4
cull_mode = 2
albedo_color = Color(0.1882353, 0.4862745, 0.63529414, 0.42745098)
albedo_texture = SubResource("GradientTexture2D_y3xqi")
emission_enabled = true
emission = Color(0.34715584, 0.46575612, 1, 1)
emission_energy_multiplier = 3.65

[sub_resource type="BoxShape3D" id="BoxShape3D_o1l8c"]
size = Vector3(2, 1, 2.7075195)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_a202f"]
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_noarx"]
albedo_color = Color(0.67393494, 1.4535487e-05, 0.47076333, 1)

[sub_resource type="SphereMesh" id="SphereMesh_o1l8c"]
radius = 0.1
height = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_r3fl7"]
radius = 0.25
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_r3fl7"]
radius = 0.225
height = 1.56

[sub_resource type="BoxMesh" id="BoxMesh_jka67"]
size = Vector3(0.285, 0.92, 0.075)

[sub_resource type="BoxMesh" id="BoxMesh_i5arm"]
size = Vector3(0.14, 0.33, 0.075)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r3fl7"]

[sub_resource type="Animation" id="Animation_wc5p8"]
resource_name = "Atack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/perna2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/perna:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Sword:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.52, 0.6, 0.6666667, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.17240362, -1.4265275, 0.6981316), Vector3(-1.0030234, -0.67612135, 0.49680096), Vector3(-1.0030235, -0.15814245, 0.4968009), Vector3(-1.0030236, -2.687561, 0.49680093), Vector3(-1.331363, -1.9583101, -2.1257567), Vector3(-1.1266377, -2.0441654, -2.9171245)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/Sword:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.52, 0.6, 0.6666667, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.5641079, 0, 0), Vector3(0.564, 0.2, -0.279), Vector3(0.58, 0.1, -0.518), Vector3(0.71201706, 0, 0.56791466), Vector3(-0.701, -0.163, 0.537), Vector3(-0.853, -0.263, 0.074)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model/Base:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Model/Demage/demage:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.56666666, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_o1l8c"]
resource_name = "Atack_2"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/perna2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/perna:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Sword:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.45000002, 0.5, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.1266377, -2.0441654, -2.9171245), Vector3(-1.8867009, -1.9914206, -3.3789575), Vector3(-1.8867009, -2.5324728, -3.3789575), Vector3(-1.8256145, -1.8779743, -2.7331855), Vector3(-1.3892821, 0.3298672, -2.7942722), Vector3(-1.2998227, 1.6681978, -2.6416042)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/Sword:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.45000002, 0.5, 0.55, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.853, -0.263, 0.074), Vector3(-0.778, 0.274, 0.074), Vector3(-0.778, 0.274, -0.21380657), Vector3(-0.303, 0.089, 0.726), Vector3(0.712, -0.051, 0.661), Vector3(0.862, -0.081, 0.006)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model/Base:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Model/Demage/demage:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 0.65000004),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_a2mso"]
resource_name = "Await_combat"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.12, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Sword:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8000001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.6750206, 0.26735651, 0), Vector3(0.675, 0.382, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Sword:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8000001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.47373882, -1.8810089, -1.6081085), Vector3(0.47298422, -1.9861847, -1.7208947)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/perna:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model/perna2:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_y3xqi"]
resource_name = "Defense"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.11, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Sword:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.269, 0.46, 0.49), Vector3(0.269, 0.565, 0.49)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Sword:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -2.8972466, -2.4085543)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/perna:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model/perna2:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_r3fl7"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.13, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Sword:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5641079, 0, 0), Vector3(0.564, 0.23, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Sword:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5707964, 0.6981317), Vector3(0, -1.5707964, 1.0471976)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/perna:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model/perna2:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jka67"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5641079, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.711654e-08, -1.5707964, -0.66919416)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/perna2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model/perna:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.7853982, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Model/perna/MeshInstance3D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.80156046, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Model/Demage/demage:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_i5arm"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/perna2:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.49),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.7853982, 0, 0), Vector3(-0.7853982, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/perna:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.49),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.7853982, 0, 0), Vector3(0.7853981, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/Sword:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5641079, 0, 0), Vector3(0.5641079, 0.17638707, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Model/Sword:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.56666666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5707964, 0.6981316), Vector3(0, -1.5707964, 1.0210177)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Model/perna/MeshInstance3D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.23, 0.43333334, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.80156046, 0), Vector3(0, -0.95657814, 0.44445735), Vector3(0, -1.0809538, 0.28865615), Vector3(0, -0.8596141, 0.03876233)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3xqi"]
_data = {
&"Atack_one": SubResource("Animation_wc5p8"),
&"Atack_two": SubResource("Animation_o1l8c"),
&"Await_combat": SubResource("Animation_a2mso"),
&"Defense": SubResource("Animation_y3xqi"),
&"Idle": SubResource("Animation_r3fl7"),
&"RESET": SubResource("Animation_jka67"),
&"Walk": SubResource("Animation_i5arm")
}

[sub_resource type="Animation" id="Animation_4s7ml"]
resource_name = "Defense"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Shield:surface_material_override/0:albedo_texture:fill_from")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Shield:surface_material_override/0:albedo_texture:fill_to")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_c8pqi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Shield:surface_material_override/0:albedo_texture:fill_from")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Shield:surface_material_override/0:albedo_texture:fill_to")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8pqi"]
_data = {
&"Defense": SubResource("Animation_4s7ml"),
&"RESET": SubResource("Animation_c8pqi")
}

[node name="Enemy" type="CharacterBody3D" unique_id=881178478]
collision_layer = 9
script = ExtResource("1_o1l8c")

[node name="Model" type="Node3D" parent="." unique_id=350447939]

[node name="Shield" type="MeshInstance3D" parent="Model" unique_id=1982226338]
transform = Transform3D(3, 0, 0, 0, -1.3113416e-07, 3, 0, -3, -1.3113416e-07, 0, 0, 0)
mesh = SubResource("SphereMesh_y3xqi")
surface_material_override/0 = SubResource("StandardMaterial3D_a2mso")

[node name="Demage" type="Area3D" parent="Model" unique_id=637669232]
collision_layer = 0
collision_mask = 128

[node name="demage" type="CollisionShape3D" parent="Model/Demage" unique_id=365681373]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.3537598)
shape = SubResource("BoxShape3D_o1l8c")
disabled = true
debug_color = Color(0.99514896, 0, 0.21801919, 0.41960785)

[node name="Base" type="MeshInstance3D" parent="Model" unique_id=1807291168]
mesh = SubResource("CapsuleMesh_a202f")
surface_material_override/0 = SubResource("StandardMaterial3D_noarx")

[node name="Eyes" type="Node3D" parent="Model/Base" unique_id=1895122993]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.22726011, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model/Base/Eyes" unique_id=1734979958]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 0.091, 0.415)
mesh = SubResource("SphereMesh_o1l8c")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Model/Base/Eyes" unique_id=188530300]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.091, 0.415)
mesh = SubResource("SphereMesh_o1l8c")

[node name="perna" type="Node3D" parent="Model" unique_id=533789490]
transform = Transform3D(1, 0, 0, 0, 0.70710653, 0.70710653, 0, -0.70710653, 0.70710653, 0.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model/perna" unique_id=187244123]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.80156046, 0)
mesh = SubResource("SphereMesh_r3fl7")

[node name="perna2" type="Node3D" parent="Model" unique_id=796373069]
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, -0.5, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model/perna2" unique_id=102305680]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.80156046, 0)
mesh = SubResource("SphereMesh_r3fl7")

[node name="Sword" type="Node3D" parent="Model" unique_id=2141948652]
transform = Transform3D(-5.110566e-08, -5.848447e-09, -0.9999995, -0.6203542, 0.78432184, 2.7116528e-08, 0.78432184, 0.6203542, -4.3711367e-08, 0.5641079, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Model/Sword" unique_id=401100458]
transform = Transform3D(-1.5298985e-08, -0.35, 0, 0.35, -1.5298985e-08, 0, 0, 0, 0.35, 0, 0, 0)
mesh = SubResource("CapsuleMesh_r3fl7")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Model/Sword" unique_id=1944087802]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.53281176, 0)
mesh = SubResource("BoxMesh_jka67")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Model/Sword" unique_id=2058845036]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.53281176, 0)
mesh = SubResource("BoxMesh_jka67")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Model/Sword" unique_id=704229127]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.20307314, 0)
mesh = SubResource("BoxMesh_i5arm")

[node name="Collision" type="CollisionShape3D" parent="." unique_id=392375373]
shape = SubResource("CapsuleShape3D_r3fl7")

[node name="CogniteNode" type="Node" parent="." unique_id=103461931]
script = ExtResource("2_y3xqi")
cognite_assemble = ExtResource("3_a2mso")
distance = 0.0
animation = ""
life = null
atack = null
await_atack = null
is_defense = null
metadata/_custom_type_script = "uid://ca685uc113riu"

[node name="Anima" type="AnimationPlayer" parent="." unique_id=740141218]
libraries/ = SubResource("AnimationLibrary_y3xqi")
playback_auto_capture_transition_type = 7
playback_auto_capture_ease_type = 2
playback_default_blend_time = 0.2

[node name="runtime_action" type="Label3D" parent="." unique_id=562211052]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0764735, 0)
pixel_size = 0.017
billboard = 1
text = "text"

[node name="Timers" type="Node" parent="." unique_id=1890783766]

[node name="await_atack" type="Timer" parent="Timers" unique_id=1927344245]
one_shot = true

[node name="shield_anima" type="AnimationPlayer" parent="." unique_id=2006700755]
libraries/ = SubResource("AnimationLibrary_c8pqi")
speed_scale = 2.0

[connection signal="body_entered" from="Model/Demage" to="." method="_on_demage_body_entered"]
[connection signal="finalized" from="CogniteNode" to="." method="_on_cognite_node_finalized"]
[connection signal="request" from="CogniteNode" to="." method="_on_cognite_node_request"]
[connection signal="started" from="CogniteNode" to="." method="_on_cognite_node_started"]
[connection signal="animation_finished" from="Anima" to="." method="_on_anima_animation_finished"]
